fix online_compiler: fix swagger configs
